--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
 <body>
   <nav class="container">
-    <div>Home</div>
-    <div>Search</div>
-    <div>Logout</div>
+    <div>Ewan</div>
+    <div>Jamie</div>
+    <div>Mum</div>
   </nav>
 </body>
 
